library/src/libqabstractitemmodel.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QDataStream QDataStream;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QModelRoleDataSpan QModelRoleDataSpan;
typedef struct QObject QObject;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
QTLIBC_API QAbstractItemModel* QAbstractItemModel_new();
QTLIBC_API QAbstractItemModel* QAbstractItemModel_new2(QObject* parent);
QTLIBC_API QMetaObject* QAbstractItemModel_MetaObject(const QAbstractItemModel* self);
QTLIBC_API void* QAbstractItemModel_Metacast(QAbstractItemModel* self, const char* param1);
QTLIBC_API int QAbstractItemModel_Metacall(QAbstractItemModel* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QAbstractItemModel_Tr(const char* s);
QTLIBC_API bool QAbstractItemModel_HasIndex(const QAbstractItemModel* self, int row, int column);
QTLIBC_API QModelIndex* QAbstractItemModel_Index(const QAbstractItemModel* self, int row, int column, QModelIndex* parent);
QTLIBC_API QModelIndex* QAbstractItemModel_Parent(const QAbstractItemModel* self, QModelIndex* child);
QTLIBC_API QModelIndex* QAbstractItemModel_Sibling(const QAbstractItemModel* self, int row, int column, QModelIndex* idx);
QTLIBC_API int QAbstractItemModel_RowCount(const QAbstractItemModel* self, QModelIndex* parent);
QTLIBC_API int QAbstractItemModel_ColumnCount(const QAbstractItemModel* self, QModelIndex* parent);
QTLIBC_API bool QAbstractItemModel_HasChildren(const QAbstractItemModel* self, QModelIndex* parent);
QTLIBC_API QVariant* QAbstractItemModel_Data(const QAbstractItemModel* self, QModelIndex* index, int role);
QTLIBC_API bool QAbstractItemModel_SetData(QAbstractItemModel* self, QModelIndex* index, QVariant* value, int role);
QTLIBC_API QVariant* QAbstractItemModel_HeaderData(const QAbstractItemModel* self, int section, int orientation, int role);
QTLIBC_API bool QAbstractItemModel_SetHeaderData(QAbstractItemModel* self, int section, int orientation, QVariant* value, int role);
QTLIBC_API libqt_map /* of int to QVariant* */ QAbstractItemModel_ItemData(const QAbstractItemModel* self, QModelIndex* index);
QTLIBC_API bool QAbstractItemModel_SetItemData(QAbstractItemModel* self, QModelIndex* index, libqt_map /* of int to QVariant* */ roles);
QTLIBC_API bool QAbstractItemModel_ClearItemData(QAbstractItemModel* self, QModelIndex* index);
QTLIBC_API libqt_list /* of libqt_string */ QAbstractItemModel_MimeTypes(const QAbstractItemModel* self);
QTLIBC_API QMimeData* QAbstractItemModel_MimeData(const QAbstractItemModel* self, libqt_list /* of QModelIndex* */ indexes);
QTLIBC_API bool QAbstractItemModel_CanDropMimeData(const QAbstractItemModel* self, QMimeData* data, int action, int row, int column, QModelIndex* parent);
QTLIBC_API bool QAbstractItemModel_DropMimeData(QAbstractItemModel* self, QMimeData* data, int action, int row, int column, QModelIndex* parent);
QTLIBC_API int QAbstractItemModel_SupportedDropActions(const QAbstractItemModel* self);
QTLIBC_API int QAbstractItemModel_SupportedDragActions(const QAbstractItemModel* self);
QTLIBC_API bool QAbstractItemModel_InsertRows(QAbstractItemModel* self, int row, int count, QModelIndex* parent);
QTLIBC_API bool QAbstractItemModel_InsertColumns(QAbstractItemModel* self, int column, int count, QModelIndex* parent);
QTLIBC_API bool QAbstractItemModel_RemoveRows(QAbstractItemModel* self, int row, int count, QModelIndex* parent);
QTLIBC_API bool QAbstractItemModel_RemoveColumns(QAbstractItemModel* self, int column, int count, QModelIndex* parent);
QTLIBC_API bool QAbstractItemModel_MoveRows(QAbstractItemModel* self, QModelIndex* sourceParent, int sourceRow, int count, QModelIndex* destinationParent, int destinationChild);
QTLIBC_API bool QAbstractItemModel_MoveColumns(QAbstractItemModel* self, QModelIndex* sourceParent, int sourceColumn, int count, QModelIndex* destinationParent, int destinationChild);
QTLIBC_API bool QAbstractItemModel_InsertRow(QAbstractItemModel* self, int row);
QTLIBC_API bool QAbstractItemModel_InsertColumn(QAbstractItemModel* self, int column);
QTLIBC_API bool QAbstractItemModel_RemoveRow(QAbstractItemModel* self, int row);
QTLIBC_API bool QAbstractItemModel_RemoveColumn(QAbstractItemModel* self, int column);
QTLIBC_API bool QAbstractItemModel_MoveRow(QAbstractItemModel* self, QModelIndex* sourceParent, int sourceRow, QModelIndex* destinationParent, int destinationChild);
QTLIBC_API bool QAbstractItemModel_MoveColumn(QAbstractItemModel* self, QModelIndex* sourceParent, int sourceColumn, QModelIndex* destinationParent, int destinationChild);
QTLIBC_API void QAbstractItemModel_FetchMore(QAbstractItemModel* self, QModelIndex* parent);
QTLIBC_API bool QAbstractItemModel_CanFetchMore(const QAbstractItemModel* self, QModelIndex* parent);
QTLIBC_API int QAbstractItemModel_Flags(const QAbstractItemModel* self, QModelIndex* index);
QTLIBC_API void QAbstractItemModel_Sort(QAbstractItemModel* self, int column, int order);
QTLIBC_API QModelIndex* QAbstractItemModel_Buddy(const QAbstractItemModel* self, QModelIndex* index);
QTLIBC_API libqt_list /* of QModelIndex* */ QAbstractItemModel_Match(const QAbstractItemModel* self, QModelIndex* start, int role, QVariant* value, int hits, int flags);
QTLIBC_API QSize* QAbstractItemModel_Span(const QAbstractItemModel* self, QModelIndex* index);
QTLIBC_API libqt_map /* of int to libqt_string */ QAbstractItemModel_RoleNames(const QAbstractItemModel* self);
QTLIBC_API bool QAbstractItemModel_CheckIndex(const QAbstractItemModel* self, QModelIndex* index);
QTLIBC_API void QAbstractItemModel_MultiData(const QAbstractItemModel* self, QModelIndex* index, QModelRoleDataSpan* roleDataSpan);
QTLIBC_API void QAbstractItemModel_DataChanged(QAbstractItemModel* self, QModelIndex* topLeft, QModelIndex* bottomRight);
QTLIBC_API void QAbstractItemModel_HeaderDataChanged(QAbstractItemModel* self, int orientation, int first, int last);
QTLIBC_API void QAbstractItemModel_LayoutChanged(QAbstractItemModel* self);
QTLIBC_API void QAbstractItemModel_LayoutAboutToBeChanged(QAbstractItemModel* self);
QTLIBC_API bool QAbstractItemModel_Submit(QAbstractItemModel* self);
QTLIBC_API void QAbstractItemModel_Revert(QAbstractItemModel* self);
QTLIBC_API void QAbstractItemModel_ResetInternalData(QAbstractItemModel* self);
QTLIBC_API libqt_string QAbstractItemModel_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QAbstractItemModel_Tr3(const char* s, const char* c, int n);
QTLIBC_API bool QAbstractItemModel_HasIndex3(const QAbstractItemModel* self, int row, int column, QModelIndex* parent);
QTLIBC_API QModelIndex* QAbstractItemModel_CreateIndex(const QAbstractItemModel* self, int row, int column);
QTLIBC_API QModelIndex* QAbstractItemModel_CreateIndex2(const QAbstractItemModel* self, int row, int column, uintptr_t id);
QTLIBC_API void QAbstractItemModel_EncodeData(const QAbstractItemModel* self, libqt_list /* of QModelIndex* */ indexes, QDataStream* stream);
QTLIBC_API bool QAbstractItemModel_DecodeData(QAbstractItemModel* self, int row, int column, QModelIndex* parent, QDataStream* stream);
QTLIBC_API void QAbstractItemModel_BeginInsertRows(QAbstractItemModel* self, QModelIndex* parent, int first, int last);
QTLIBC_API void QAbstractItemModel_EndInsertRows(QAbstractItemModel* self);
QTLIBC_API void QAbstractItemModel_BeginRemoveRows(QAbstractItemModel* self, QModelIndex* parent, int first, int last);
QTLIBC_API void QAbstractItemModel_EndRemoveRows(QAbstractItemModel* self);
QTLIBC_API bool QAbstractItemModel_BeginMoveRows(QAbstractItemModel* self, QModelIndex* sourceParent, int sourceFirst, int sourceLast, QModelIndex* destinationParent, int destinationRow);
QTLIBC_API void QAbstractItemModel_EndMoveRows(QAbstractItemModel* self);
QTLIBC_API void QAbstractItemModel_BeginInsertColumns(QAbstractItemModel* self, QModelIndex* parent, int first, int last);
QTLIBC_API void QAbstractItemModel_EndInsertColumns(QAbstractItemModel* self);
QTLIBC_API void QAbstractItemModel_BeginRemoveColumns(QAbstractItemModel* self, QModelIndex* parent, int first, int last);
QTLIBC_API void QAbstractItemModel_EndRemoveColumns(QAbstractItemModel* self);
QTLIBC_API bool QAbstractItemModel_BeginMoveColumns(QAbstractItemModel* self, QModelIndex* sourceParent, int sourceFirst, int sourceLast, QModelIndex* destinationParent, int destinationColumn);
QTLIBC_API void QAbstractItemModel_EndMoveColumns(QAbstractItemModel* self);
QTLIBC_API void QAbstractItemModel_BeginResetModel(QAbstractItemModel* self);
QTLIBC_API void QAbstractItemModel_EndResetModel(QAbstractItemModel* self);
QTLIBC_API void QAbstractItemModel_ChangePersistentIndex(QAbstractItemModel* self, QModelIndex* from, QModelIndex* to);
QTLIBC_API void QAbstractItemModel_ChangePersistentIndexList(QAbstractItemModel* self, libqt_list /* of QModelIndex* */ from, libqt_list /* of QModelIndex* */ to);
QTLIBC_API libqt_list /* of QModelIndex* */ QAbstractItemModel_PersistentIndexList(const QAbstractItemModel* self);