src/libqabstractitemmodel.bf

public struct QAbstractItemModel
{
	[LinkName("QAbstractItemModel_new")]
	public static extern void* QAbstractItemModel_new();
	[LinkName("QAbstractItemModel_new2")]
	public static extern void* QAbstractItemModel_new2(QObject parent);
	[LinkName("QAbstractItemModel_MetaObject")]
	public static extern QMetaObject QAbstractItemModel_MetaObject(void* c_this);
	[LinkName("QAbstractItemModel_Metacast")]
	public static extern void QAbstractItemModel_Metacast(void* c_this, char8[] param1);
	[LinkName("QAbstractItemModel_Metacall")]
	public static extern int32 QAbstractItemModel_Metacall(void* c_this, int64 param1, int32 param2, void param3);
	[LinkName("QAbstractItemModel_Tr")]
	public static extern char8[] QAbstractItemModel_Tr(char8[] s);
	[LinkName("QAbstractItemModel_HasIndex")]
	public static extern bool QAbstractItemModel_HasIndex(void* c_this, int32 row, int32 column);
	[LinkName("QAbstractItemModel_Index")]
	public static extern QModelIndex QAbstractItemModel_Index(void* c_this, int32 row, int32 column, QModelIndex parent);
	[LinkName("QAbstractItemModel_Parent")]
	public static extern QModelIndex QAbstractItemModel_Parent(void* c_this, QModelIndex child);
	[LinkName("QAbstractItemModel_Sibling")]
	public static extern QModelIndex QAbstractItemModel_Sibling(void* c_this, int32 row, int32 column, QModelIndex idx);
	[LinkName("QAbstractItemModel_RowCount")]
	public static extern int32 QAbstractItemModel_RowCount(void* c_this, QModelIndex parent);
	[LinkName("QAbstractItemModel_ColumnCount")]
	public static extern int32 QAbstractItemModel_ColumnCount(void* c_this, QModelIndex parent);
	[LinkName("QAbstractItemModel_HasChildren")]
	public static extern bool QAbstractItemModel_HasChildren(void* c_this, QModelIndex parent);
	[LinkName("QAbstractItemModel_Data")]
	public static extern QVariant QAbstractItemModel_Data(void* c_this, QModelIndex index, int32 role);
	[LinkName("QAbstractItemModel_SetData")]
	public static extern bool QAbstractItemModel_SetData(void* c_this, QModelIndex index, QVariant value, int32 role);
	[LinkName("QAbstractItemModel_HeaderData")]
	public static extern QVariant QAbstractItemModel_HeaderData(void* c_this, int32 section, int64 orientation, int32 role);
	[LinkName("QAbstractItemModel_SetHeaderData")]
	public static extern bool QAbstractItemModel_SetHeaderData(void* c_this, int32 section, int64 orientation, QVariant value, int32 role);
	[LinkName("QAbstractItemModel_ItemData")]
	public static extern void* QAbstractItemModel_ItemData(void* c_this, QModelIndex index);
	[LinkName("QAbstractItemModel_SetItemData")]
	public static extern bool QAbstractItemModel_SetItemData(void* c_this, QModelIndex index, void* roles);
	[LinkName("QAbstractItemModel_ClearItemData")]
	public static extern bool QAbstractItemModel_ClearItemData(void* c_this, QModelIndex index);
	[LinkName("QAbstractItemModel_MimeTypes")]
	public static extern char8[][] QAbstractItemModel_MimeTypes(void* c_this);
	[LinkName("QAbstractItemModel_MimeData")]
	public static extern QMimeData QAbstractItemModel_MimeData(void* c_this, QModelIndex[] indexes);
	[LinkName("QAbstractItemModel_CanDropMimeData")]
	public static extern bool QAbstractItemModel_CanDropMimeData(void* c_this, QMimeData data, int64 action, int32 row, int32 column, QModelIndex parent);
	[LinkName("QAbstractItemModel_DropMimeData")]
	public static extern bool QAbstractItemModel_DropMimeData(void* c_this, QMimeData data, int64 action, int32 row, int32 column, QModelIndex parent);
	[LinkName("QAbstractItemModel_SupportedDropActions")]
	public static extern int64 QAbstractItemModel_SupportedDropActions(void* c_this);
	[LinkName("QAbstractItemModel_SupportedDragActions")]
	public static extern int64 QAbstractItemModel_SupportedDragActions(void* c_this);
	[LinkName("QAbstractItemModel_InsertRows")]
	public static extern bool QAbstractItemModel_InsertRows(void* c_this, int32 row, int32 count, QModelIndex parent);
	[LinkName("QAbstractItemModel_InsertColumns")]
	public static extern bool QAbstractItemModel_InsertColumns(void* c_this, int32 column, int32 count, QModelIndex parent);
	[LinkName("QAbstractItemModel_RemoveRows")]
	public static extern bool QAbstractItemModel_RemoveRows(void* c_this, int32 row, int32 count, QModelIndex parent);
	[LinkName("QAbstractItemModel_RemoveColumns")]
	public static extern bool QAbstractItemModel_RemoveColumns(void* c_this, int32 column, int32 count, QModelIndex parent);
	[LinkName("QAbstractItemModel_MoveRows")]
	public static extern bool QAbstractItemModel_MoveRows(void* c_this, QModelIndex sourceParent, int32 sourceRow, int32 count, QModelIndex destinationParent, int32 destinationChild);
	[LinkName("QAbstractItemModel_MoveColumns")]
	public static extern bool QAbstractItemModel_MoveColumns(void* c_this, QModelIndex sourceParent, int32 sourceColumn, int32 count, QModelIndex destinationParent, int32 destinationChild);
	[LinkName("QAbstractItemModel_InsertRow")]
	public static extern bool QAbstractItemModel_InsertRow(void* c_this, int32 row);
	[LinkName("QAbstractItemModel_InsertColumn")]
	public static extern bool QAbstractItemModel_InsertColumn(void* c_this, int32 column);
	[LinkName("QAbstractItemModel_RemoveRow")]
	public static extern bool QAbstractItemModel_RemoveRow(void* c_this, int32 row);
	[LinkName("QAbstractItemModel_RemoveColumn")]
	public static extern bool QAbstractItemModel_RemoveColumn(void* c_this, int32 column);
	[LinkName("QAbstractItemModel_MoveRow")]
	public static extern bool QAbstractItemModel_MoveRow(void* c_this, QModelIndex sourceParent, int32 sourceRow, QModelIndex destinationParent, int32 destinationChild);
	[LinkName("QAbstractItemModel_MoveColumn")]
	public static extern bool QAbstractItemModel_MoveColumn(void* c_this, QModelIndex sourceParent, int32 sourceColumn, QModelIndex destinationParent, int32 destinationChild);
	[LinkName("QAbstractItemModel_FetchMore")]
	public static extern void QAbstractItemModel_FetchMore(void* c_this, QModelIndex parent);
	[LinkName("QAbstractItemModel_CanFetchMore")]
	public static extern bool QAbstractItemModel_CanFetchMore(void* c_this, QModelIndex parent);
	[LinkName("QAbstractItemModel_Flags")]
	public static extern int64 QAbstractItemModel_Flags(void* c_this, QModelIndex index);
	[LinkName("QAbstractItemModel_Sort")]
	public static extern void QAbstractItemModel_Sort(void* c_this, int32 column, int64 order);
	[LinkName("QAbstractItemModel_Buddy")]
	public static extern QModelIndex QAbstractItemModel_Buddy(void* c_this, QModelIndex index);
	[LinkName("QAbstractItemModel_Match")]
	public static extern QModelIndex[] QAbstractItemModel_Match(void* c_this, QModelIndex start, int32 role, QVariant value, int32 hits, int64 flags);
	[LinkName("QAbstractItemModel_Span")]
	public static extern QSize QAbstractItemModel_Span(void* c_this, QModelIndex index);
	[LinkName("QAbstractItemModel_RoleNames")]
	public static extern void* QAbstractItemModel_RoleNames(void* c_this);
	[LinkName("QAbstractItemModel_CheckIndex")]
	public static extern bool QAbstractItemModel_CheckIndex(void* c_this, QModelIndex index);
	[LinkName("QAbstractItemModel_MultiData")]
	public static extern void QAbstractItemModel_MultiData(void* c_this, QModelIndex index, QModelRoleDataSpan roleDataSpan);
	[LinkName("QAbstractItemModel_DataChanged")]
	public static extern void QAbstractItemModel_DataChanged(void* c_this, QModelIndex topLeft, QModelIndex bottomRight);
	[LinkName("QAbstractItemModel_HeaderDataChanged")]
	public static extern void QAbstractItemModel_HeaderDataChanged(void* c_this, int64 orientation, int32 first, int32 last);
	[LinkName("QAbstractItemModel_LayoutChanged")]
	public static extern void QAbstractItemModel_LayoutChanged(void* c_this);
	[LinkName("QAbstractItemModel_LayoutAboutToBeChanged")]
	public static extern void QAbstractItemModel_LayoutAboutToBeChanged(void* c_this);
	[LinkName("QAbstractItemModel_Submit")]
	public static extern bool QAbstractItemModel_Submit(void* c_this);
	[LinkName("QAbstractItemModel_Revert")]
	public static extern void QAbstractItemModel_Revert(void* c_this);
	[LinkName("QAbstractItemModel_ResetInternalData")]
	public static extern void QAbstractItemModel_ResetInternalData(void* c_this);
	[LinkName("QAbstractItemModel_CreateIndex")]
	public static extern QModelIndex QAbstractItemModel_CreateIndex(void* c_this, int32 row, int32 column);
	[LinkName("QAbstractItemModel_CreateIndex2")]
	public static extern QModelIndex QAbstractItemModel_CreateIndex2(void* c_this, int32 row, int32 column, c_uintptr id);
	[LinkName("QAbstractItemModel_EncodeData")]
	public static extern void QAbstractItemModel_EncodeData(void* c_this, QModelIndex[] indexes, QDataStream stream);
	[LinkName("QAbstractItemModel_DecodeData")]
	public static extern bool QAbstractItemModel_DecodeData(void* c_this, int32 row, int32 column, QModelIndex parent, QDataStream stream);
	[LinkName("QAbstractItemModel_BeginInsertRows")]
	public static extern void QAbstractItemModel_BeginInsertRows(void* c_this, QModelIndex parent, int32 first, int32 last);
	[LinkName("QAbstractItemModel_EndInsertRows")]
	public static extern void QAbstractItemModel_EndInsertRows(void* c_this);
	[LinkName("QAbstractItemModel_BeginRemoveRows")]
	public static extern void QAbstractItemModel_BeginRemoveRows(void* c_this, QModelIndex parent, int32 first, int32 last);
	[LinkName("QAbstractItemModel_EndRemoveRows")]
	public static extern void QAbstractItemModel_EndRemoveRows(void* c_this);
	[LinkName("QAbstractItemModel_BeginMoveRows")]
	public static extern bool QAbstractItemModel_BeginMoveRows(void* c_this, QModelIndex sourceParent, int32 sourceFirst, int32 sourceLast, QModelIndex destinationParent, int32 destinationRow);
	[LinkName("QAbstractItemModel_EndMoveRows")]
	public static extern void QAbstractItemModel_EndMoveRows(void* c_this);
	[LinkName("QAbstractItemModel_BeginInsertColumns")]
	public static extern void QAbstractItemModel_BeginInsertColumns(void* c_this, QModelIndex parent, int32 first, int32 last);
	[LinkName("QAbstractItemModel_EndInsertColumns")]
	public static extern void QAbstractItemModel_EndInsertColumns(void* c_this);
	[LinkName("QAbstractItemModel_BeginRemoveColumns")]
	public static extern void QAbstractItemModel_BeginRemoveColumns(void* c_this, QModelIndex parent, int32 first, int32 last);
	[LinkName("QAbstractItemModel_EndRemoveColumns")]
	public static extern void QAbstractItemModel_EndRemoveColumns(void* c_this);
	[LinkName("QAbstractItemModel_BeginMoveColumns")]
	public static extern bool QAbstractItemModel_BeginMoveColumns(void* c_this, QModelIndex sourceParent, int32 sourceFirst, int32 sourceLast, QModelIndex destinationParent, int32 destinationColumn);
	[LinkName("QAbstractItemModel_EndMoveColumns")]
	public static extern void QAbstractItemModel_EndMoveColumns(void* c_this);
	[LinkName("QAbstractItemModel_BeginResetModel")]
	public static extern void QAbstractItemModel_BeginResetModel(void* c_this);
	[LinkName("QAbstractItemModel_EndResetModel")]
	public static extern void QAbstractItemModel_EndResetModel(void* c_this);
	[LinkName("QAbstractItemModel_ChangePersistentIndex")]
	public static extern void QAbstractItemModel_ChangePersistentIndex(void* c_this, QModelIndex from, QModelIndex to);
	[LinkName("QAbstractItemModel_ChangePersistentIndexList")]
	public static extern void QAbstractItemModel_ChangePersistentIndexList(void* c_this, QModelIndex[] from, QModelIndex[] to);
	[LinkName("QAbstractItemModel_PersistentIndexList")]
	public static extern QModelIndex[] QAbstractItemModel_PersistentIndexList(void* c_this);
	[LinkName("QAbstractItemModel_Tr2")]
	public static extern char8[] QAbstractItemModel_Tr2(char8[] s, char8[] c);
	[LinkName("QAbstractItemModel_Tr3")]
	public static extern char8[] QAbstractItemModel_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QAbstractItemModel_HasIndex3")]
	public static extern bool QAbstractItemModel_HasIndex3(void* c_this, int32 row, int32 column, QModelIndex parent);
